--- a/template1/index.html
+++ b/template1/index.html
@@ -55,6 +55,69 @@
         </div>
     </div>
 </div>
+
+<section class="section">
+    <div class="container">
+        <div class="section__header">
+            <h3 class="section__suptitle">What we do</h3>
+            <h2 class="section__title">Story about us</h2>
+            <div class="section__text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
+        <div class="about">
+            <div class="about__item">
+                <div class="about__image">
+                    <img src="assets/images/about/1.jpg" alt="">
+                </div>
+                <div class="about__text">Super team</div>
+            </div>
+            <div class="about__item">
+                <div class="about__image">
+                    <img src="assets/images/about/2.jpg" alt="">
+                </div>
+                <div class="about__text">Super team</div>
+            </div>
+            <div class="about__item">
+                <div class="about__image">
+                    <img src="assets/images/about/3.jpg" alt="">
+                </div>
+                <div class="about__text">Super team</div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<div class="statistics">
+    <div class="container">
+        <div class="stat">
+            <div class="stat__item">
+                <div class="stat_count">45</div>
+                <div class="stat__text">Web Design Project</div>
+            </div>
+            <div class="stat__item">
+                <div class="stat_count">123</div>
+                <div class="stat__text">Web Design Project</div>
+            </div>
+            <div class="stat__item">
+                <div class="stat_count">15</div>
+                <div class="stat__text">Web Design Project</div>
+            </div>
+            <div class="stat__item">
+                <div class="stat_count">99</div>
+                <div class="stat__text">Web Design Project</div>
+            </div>
+            <div class="stat__item">
+                <div class="stat_count">24</div>
+                <div class="stat__text">Web Design Project</div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
 <!--hot keys-->
