--- a/template1/index.html
+++ b/template1/index.html
@@ -118,6 +118,68 @@
         </div>
     </div>
 </div>
+
+<section class="section">
+    <div class="container">
+        <div class="section__header">
+            <h3 class="section__suptitle">We work with</h3>
+            <h2 class="section__title">Amazing services</h2>
+        </div>
+        <div class="services">
+            <div class="services__item">
+                <img class="services__icon" src="assets/images/services/photography.png" alt="">
+                <div class="services__title">Photography</div>
+                <div class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor. </div>
+            </div>
+            <div class="services__item">
+                <img class="services__icon" src="assets/images/services/webdesign.png" alt="">
+                <div class="services__title">Photography</div>
+                <div class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor. </div>
+            </div>
+            <div class="services__item">
+                <img class="services__icon" src="assets/images/services/creativity.png" alt="">
+                <div class="services__title">Photography</div>
+                <div class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor. </div>
+            </div>
+        </div>
+        <hr>
+        <div class="services">
+            <div class="services__item">
+                <img class="services__icon" src="assets/images/services/seo.png" alt="">
+                <div class="services__title">Photography</div>
+                <div class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor. </div>
+            </div>
+            <div class="services__item">
+                <img class="services__icon" src="assets/images/services/css-html.png" alt="">
+                <div class="services__title">Photography</div>
+                <div class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor. </div>
+            </div>
+            <div class="services__item">
+                <img class="services__icon" src="assets/images/services/digital.png" alt="">
+                <div class="services__title">Photography</div>
+                <div class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor. </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section class="section section--devices">
+    <div class="container">
+        <div class="section__header">
+            <h3 class="section__suptitle">For all devices</h3>
+            <h2 class="section__title">Unique design</h2>
+        </div>
+        <div class="devices">
+            <img src="assets/images/ipad.png" alt="" class="devices__item">
+            <img src="assets/images/iphone.png" alt="" class="devices__item--iphone">
+        </div>
+
+
+
+    </div>
+</section>
+
 </body>
 </html>
 <!--hot keys-->
