added next displays

--- a/template1/index.html
+++ b/template1/index.html
@@ -498,7 +498,7 @@
         </div>
         <div class="clients">
             <div class="clients__item">
-                <img class="clients__photo" src="http://placehold.it/110" alt="">
+                <img class="clients__photo" src="assets/images/clients/1.png" alt="">
                 <div class="clients__content">
                     <div class="clients__name">Mattwew Dix</div>
                     <div class="clients__prof">Graphic design</div>
@@ -509,7 +509,7 @@
                 </div>
             </div>
             <div class="clients__item">
-                <img class="clients__photo" src="http://placehold.it/110" alt="">
+                <img class="clients__photo" src="assets/images/clients/2.png" alt="">
                 <div class="clients__content">
                     <div class="clients__name">Mattwew Dix</div>
                     <div class="clients__prof">Graphic design</div>
@@ -520,7 +520,7 @@
                 </div>
             </div>
             <div class="clients__item">
-                <img class="clients__photo" src="http://placehold.it/110" alt="">
+                <img class="clients__photo" src="assets/images/clients/3.png" alt="">
                 <div class="clients__content">
                     <div class="clients__name">Mattwew Dix</div>
                     <div class="clients__prof">Graphic design</div>
@@ -531,7 +531,7 @@
                 </div>
             </div>
             <div class="clients__item">
-                <img class="clients__photo" src="http://placehold.it/110" alt="">
+                <img class="clients__photo" src="assets/images/clients/4.png" alt="">
                 <div class="clients__content">
                     <div class="clients__name">Mattwew Dix</div>
                     <div class="clients__prof">Graphic design</div>
@@ -545,6 +545,98 @@
     </div>
 </section>
 
+<div class="section">
+    <div class="container">
+        <div class="section__header">
+            <h3 class="section__suptitle">Our blog</h3>
+            <h2 class="section__title">Latest blog</h2>
+        </div>
+        <div class="blog">
+            <div class="blog__item">
+                <div class="blog__header">
+                    <a href="#">
+                        <img class="blog__photo" src="assets/images/blog/1.jpg" alt="">
+                    </a>
+                    <div class="blog__date">
+                       <div class="blog__date--day">15</div>Jan
+                    </div>
+                </div>
+                <div class="blog__content">
+                    <div class="blog__title">
+                        <a href="#">Lorem ipsum dolor sit amet,</a>
+                    </div>
+                    <div class="blog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</div>
+                </div>
+                <div class="blog__footer">
+                    <div class="blog__stat">
+                        <span class="blog__stat__item"><i class="fas fa-eye"></i>176</span>
+                        <span class="blog__stat__item"><i class="fas fa-comment"></i>13</span>
+                    </div>
+                </div>
+            </div>
+            <div class="blog__item">
+                <div class="blog__header">
+                    <a href="#">
+                        <img class="blog__photo" src="assets/images/blog/2.jpg" alt="">
+                    </a>
+                    <div class="blog__date">
+                        <div class="blog__date--day">15</div>Jan
+                    </div>
+                </div>
+                <div class="blog__content">
+                    <div class="blog__title">
+                        <a href="#">Lorem ipsum dolor sit amet,</a>
+                    </div>
+                    <div class="blog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</div>
+                </div>
+                <div class="blog__footer">
+                    <div class="blog__stat">
+                        <span class="blog__stat__item"><i class="fas fa-eye"></i>176</span>
+                        <span class="blog__stat__item"><i class="fas fa-comment"></i>13</span>
+                    </div>
+                </div>
+            </div>
+            <div class="blog__item">
+                <div class="blog__header">
+                    <a href="#">
+                        <img class="blog__photo" src="assets/images/blog/3.jpg" alt="">
+                    </a>
+                    <div class="blog__date">
+                        <div class="blog__date--day">15</div>Jan
+                    </div>
+                </div>
+                <div class="blog__content">
+                    <div class="blog__title">
+                        <a href="#">Lorem ipsum dolor sit amet,</a>
+                    </div>
+                    <div class="blog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</div>
+                </div>
+                <div class="blog__footer">
+                    <div class="blog__stat">
+                        <span class="blog__stat__item"><i class="fas fa-eye"></i>176</span>
+                        <span class="blog__stat__item"><i class="fas fa-comment"></i>13</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="section section--map">
+    <div class="container">
+        <div class="map">
+            <div class="map__title">
+                <h2>
+                    <div><i class="fas fa-map-marker-alt"></i></div>
+                    <a href="#" target="_blank">Open map</a>
+                </h2>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
