--- a/template1/index.html
+++ b/template1/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&display=swap&subset=cyrillic"
           rel="stylesheet">
@@ -19,6 +20,8 @@
                 <a class="nav__link" href="#">Blog</a>
                 <a class="nav__link" href="#">Work</a>
                 <a class="nav__link" href="#">Contact</a>
+                <a class="nav__link" href="#"><i class="fas fa-cart-plus"></i></a>
+                <a class="nav__link" href="#"><i class="fas fa-search"></i></a>
             </nav>
         </div>
     </div>
@@ -37,19 +40,19 @@
             <div class="slider__inner">
                 <div class="slider__item active">
                     <span class="slider__num">01</span>
-                    Intro
+                    <span class="slider__text">Intro</span>
                 </div>
                 <div class="slider__item">
                     <span class="slider__num">02</span>
-                    Work
+                    <span class="slider__text">Work</span>
                 </div>
                 <div class="slider__item">
                     <span class="slider__num">03</span>
-                    About
+                    <span class="slider__text">About</span>
                 </div>
                 <div class="slider__item">
                     <span class="slider__num">04</span>
-                    Contacts
+                    <span class="slider__text">Contacts</span>
                 </div>
             </div>
 
@@ -133,30 +136,27 @@
             <h2 class="section__title">Amazing services</h2>
         </div>
         <div class="services">
-            <div class="services__item">
+            <div class="services__item services__item--border">
                 <img class="services__icon" src="assets/images/services/photography.png" alt="">
                 <div class="services__title">Photography</div>
                 <div class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                     tempor.
                 </div>
             </div>
-            <div class="services__item">
+            <div class="services__item services__item--border">
                 <img class="services__icon" src="assets/images/services/webdesign.png" alt="">
                 <div class="services__title">Photography</div>
                 <div class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                     tempor.
                 </div>
             </div>
-            <div class="services__item">
+            <div class="services__item services__item--border">
                 <img class="services__icon" src="assets/images/services/creativity.png" alt="">
                 <div class="services__title">Photography</div>
                 <div class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                     tempor.
                 </div>
             </div>
-        </div>
-        <hr>
-        <div class="services">
             <div class="services__item">
                 <img class="services__icon" src="assets/images/services/seo.png" alt="">
                 <div class="services__title">Photography</div>
@@ -558,15 +558,18 @@
                         <img class="blog__photo" src="assets/images/blog/1.jpg" alt="">
                     </a>
                     <div class="blog__date">
-                       <div class="blog__date--day">15</div>Jan
+                        <div class="blog__date--day">15</div>
+                        Jan
                     </div>
                 </div>
                 <div class="blog__content">
                     <div class="blog__title">
                         <a href="#">Lorem ipsum dolor sit amet,</a>
                     </div>
-                    <div class="blog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua.</div>
+                    <div class="blog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut
+                        labore et dolore magna aliqua.
+                    </div>
                 </div>
                 <div class="blog__footer">
                     <div class="blog__stat">
@@ -581,15 +584,18 @@
                         <img class="blog__photo" src="assets/images/blog/2.jpg" alt="">
                     </a>
                     <div class="blog__date">
-                        <div class="blog__date--day">15</div>Jan
+                        <div class="blog__date--day">15</div>
+                        Jan
                     </div>
                 </div>
                 <div class="blog__content">
                     <div class="blog__title">
                         <a href="#">Lorem ipsum dolor sit amet,</a>
                     </div>
-                    <div class="blog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua.</div>
+                    <div class="blog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut
+                        labore et dolore magna aliqua.
+                    </div>
                 </div>
                 <div class="blog__footer">
                     <div class="blog__stat">
@@ -604,15 +610,18 @@
                         <img class="blog__photo" src="assets/images/blog/3.jpg" alt="">
                     </a>
                     <div class="blog__date">
-                        <div class="blog__date--day">15</div>Jan
+                        <div class="blog__date--day">15</div>
+                        Jan
                     </div>
                 </div>
                 <div class="blog__content">
                     <div class="blog__title">
                         <a href="#">Lorem ipsum dolor sit amet,</a>
                     </div>
-                    <div class="blog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua.</div>
+                    <div class="blog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut
+                        labore et dolore magna aliqua.
+                    </div>
                 </div>
                 <div class="blog__footer">
                     <div class="blog__stat">
@@ -637,6 +646,109 @@
         </div>
     </div>
 </div>
+
+<footer class="footer">
+    <div class="container">
+        <div class="footer__inner">
+            <div class="footer__col footer__col--first">
+                <div class="footer__logo">MoGo</div>
+                <div class="footer__text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex.
+                </div>
+                <div class="footer__social">
+                    <div class="footer__social--header">
+                        <b>15k</b>
+                        followers
+                    </div>
+                    <div class="footer__social--content">
+                        Follow us:
+                        <a href="#" target="_blank">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="#" target="_blank">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="#" target="_blank">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                    </div>
+                </div>
+                <form class="subscribe" action="/" method="post">
+                    <input class="subscribe__input" placeholder="Your email..." name="email" type="email">
+                    <button class="subscribe__button" type="submit">Subscribe</button>
+                </form>
+            </div>
+
+            <div class="footer__col footer__col--second">
+                <div class="footer__title">Blogs</div>
+                <div class="blogs">
+                    <div class="blogs__item">
+                        <img class="blogs__img" src="assets/images/blog/1.jpg" alt="">
+                        <div class="blogs__content">
+                            <a href="#" class="blogs__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                sed do eiusmod</a>
+                            <div class="blogs__date">Jan 9, 2016</div>
+                        </div>
+                    </div>
+                    <div class="blogs__item">
+                        <img class="blogs__img" src="assets/images/blog/2.jpg" alt="">
+                        <div class="blogs__content">
+                            <a href="#" class="blogs__title">Lorem sed do eiusmod</a>
+                            <div class="blogs__date">Jan 9, 2016</div>
+                        </div>
+                    </div>
+                    <div class="blogs__item">
+                        <img class="blogs__img" src="assets/images/blog/3.jpg" alt="">
+                        <div class="blogs__content">
+                            <a href="#" class="blogs__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                sed do eiusmod</a>
+                            <div class="blogs__date">Jan 9, 2016</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__col footer__col--third">
+                <div class="footer__title">Instagram</div>
+                <div class="instagram">
+                    <a class="instagram__item" href="#" target="_blank">
+                        <img class="instagram__img" src="assets/images/instagram/1.jpg" alt="">
+                    </a>
+                    <a class="instagram__item" href="#" target="_blank">
+                        <img class="instagram__img" src="assets/images/instagram/2.jpg" alt="">
+                    </a>
+                    <a class="instagram__item" href="#" target="_blank">
+                        <img class="instagram__img" src="assets/images/instagram/3.jpg" alt="">
+                    </a>
+                    <a class="instagram__item" href="#" target="_blank">
+                        <img class="instagram__img" src="assets/images/instagram/4.jpg" alt="">
+                    </a>
+                    <a class="instagram__item" href="#" target="_blank">
+                        <img class="instagram__img" src="assets/images/instagram/5.jpg" alt="">
+                    </a>
+                    <a class="instagram__item" href="#" target="_blank">
+                        <img class="instagram__img" src="assets/images/instagram/6.jpg" alt="">
+                    </a>
+                    <a class="instagram__item" href="#" target="_blank">
+                        <img class="instagram__img" src="assets/images/instagram/7.jpg" alt="">
+                    </a>
+                    <a class="instagram__item" href="#" target="_blank">
+                        <img class="instagram__img" src="assets/images/instagram/8.jpg" alt="">
+                    </a>
+                    <a class="instagram__item" href="#" target="_blank">
+                        <img class="instagram__img" src="assets/images/instagram/9.jpg" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="copyright">
+            @ 3432 dsfkljjdfgjjio <span>jdfj</span> jgjgjgj
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
