--- a/template3/index.html
+++ b/template3/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+          rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
@@ -17,15 +18,15 @@
 <header class="header">
     <div class="container">
         <div class="header__inner">
-                <a href="/" class="header__logo-link">
-                    <img class="header__logo-img" src="img/odigo.svg" alt="">
-                </a>
-                <nav class="nav">
-                    <a class="nav__link" href="#">Articles</a>
-                    <a class="nav__link" href="#">Locations</a>
-                    <a class="nav__link" href="#">Videos</a>
-                    <a class="nav__link" href="#">Sign in</a>
-                </nav>
+            <a href="/" class="header__logo-link">
+                <img class="header__logo-img" src="img/odigo.svg" alt="logo odigo">
+            </a>
+            <nav class="nav">
+                <a class="nav__link" href="#">Articles</a>
+                <a class="nav__link" href="#">Locations</a>
+                <a class="nav__link" href="#">Videos</a>
+                <a class="nav__link" href="#">Sign in</a>
+            </nav>
         </div> <!--/header__inner-->
     </div><!--/container-->
 </header>
@@ -37,10 +38,13 @@
         <div class="container">
             <div class="intro__inner">
                 <h1 class="intro__title">Discover Amazing places in Japan</h1>
-                <p class="intro__text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door, </p>
+                <p class="intro__text">Jump off balcony, onto stranger's head. Chase ball of string hide when guests
+                    come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the
+                    bed, for attack the child, open the door, </p>
                 <form class="intro__search__form">
-                    <input class="search__input" name="user_hobie" type="text" placeholder="What would you like to do?" >
-                    <input class="search__input" name="user_favourite_place" type="text" placeholder="Where would you like to go?">
+                    <input class="search__input" name="user_hobie" type="text" placeholder="What would you like to do?">
+                    <input class="search__input" name="user_favourite_place" type="text"
+                           placeholder="Where would you like to go?">
                     <button class="btn btn--search" type="submit">SEARCH</button>
                 </form>
             </div>
@@ -48,16 +52,79 @@
     </section>
     <!--/INTRO-->
 
-
+    <!--BENEFITS-->
     <section class="benefits">
         <div class="container">
             <div class="benefits__inner">
-                
+                <h2 class="benefits__title">Benefits of Odigo</h2>
+                <div class="benefits__items">
+                    <div class="benefits__item">
+                        <img class="benefits__item__img" src="img/benefits/Icon1.svg" alt="Welcome to Odigo!">
+                        <div class="benefits__item__title">Welcome to Odigo!</div>
+                        <div class="benefits__item__text">
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                        </div>
+                        <a href="#" class="btn__learn__more">Learn More</a>
+                    </div>
+                    <div class="benefits__item">
+                        <img class="benefits__item__img" src="img/benefits/Icon2.svg" alt="Your Personal Japan Guide">
+                        <div class="benefits__item__title">Your Personal Japan Guide</div>
+                        <div class="benefits__item__text">
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                        </div>
+                        <a href="#" class="btn__learn__more">Learn More</a>
+                    </div>
+                    <div class="benefits__item">
+                        <img class="benefits__item__img" src="img/benefits/Icon3.svg" alt="Promoting Local Businesses">
+                        <div class="benefits__item__title">Promoting Local Businesses</div>
+                        <div class="benefits__item__text">
+                            Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.
+                        </div>
+                        <a href="#" class="btn__learn__more">Learn More</a>
+                    </div>
+                </div><!--/benefits__items-->
+            </div><!--/benefits__inner-->
+        </div><!--/container-->
+    </section>
+    <!--/BENEFITS-->
+
+    <!--PLACES-->
+    <section class="places">
+        <div class="container">
+            <div class="places__header">
+                <h2 class="places__title title__blue__line">Get inspired for your next trip</h2>
+                <a href="#" class="btn__learn__more">VIEW ALL</a>
+            </div>
+            <div class="places__cards">
+                <figure class="places__card half">
+                    <img class="places__card__img" src="img/inspiration/1_fuji.png" alt="Mount Fuji">
+                    <figcaption class="places__card__name">Mount Fuji</figcaption>
+                    <a href="#" class="places__card__link"></a>
+                </figure>
+                <figure class="places__card half">
+                    <img class="places__card__img" src="img/inspiration/2_kiyoto.png" alt="Kyoto">
+                    <figcaption class="places__card__name">Kyoto</figcaption>
+                    <a href="#" class="places__card__link"></a>
+                </figure>
+                <figure class="places__card third">
+                    <img class="places__card__img" src="img/inspiration/3_tokyo.png" alt="Tokyo">
+                    <figcaption class="places__card__name">Tokyo</figcaption>
+                    <a href="#" class="places__card__link"></a>
+                </figure>
+                <figure class="places__card third">
+                    <img class="places__card__img" src="img/inspiration/4_nigata.png" alt="Niigata">
+                    <figcaption class="places__card__name">Niigata</figcaption>
+                    <a href="#" class="places__card__link"></a>
+                </figure>
+                <figure class="places__card third">
+                    <img class="places__card__img" src="img/inspiration/5-saporo.png" alt="Sapporo">
+                    <figcaption class="places__card__name">Sapporo</figcaption>
+                    <a href="#" class="places__card__link"></a>
+                </figure>
             </div>
         </div>
     </section>
-
-
+    <!--/PLACES-->
 
 </main>
 </body>
